[gd_scene load_steps=6 format=3 uid="uid://bgrt0hjvvygbo"]

[ext_resource type="Script" path="res://scenes/tank_gun.gd" id="1_5hxib"]
[ext_resource type="Texture2D" uid="uid://dm11o23uru4a2" path="res://sprites/Weapons/TheUltimateWeaponsPack_Sheet.png" id="1_b3usi"]
[ext_resource type="PackedScene" uid="uid://usmt8e8tagoy" path="res://scenes/input_synchronizer.tscn" id="2_k6bk0"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ftkfw"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_71gqo"]
properties/0/path = NodePath(".:rotation")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="TankGun" type="Node2D"]
script = ExtResource("1_5hxib")

[node name="BulletSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath(".")

[node name="InputSynchronizer" parent="." instance=ExtResource("2_k6bk0")]

[node name="ServerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ftkfw")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_71gqo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(6, 6)
texture = ExtResource("1_b3usi")
flip_h = true
region_enabled = true
region_rect = Rect2(288, 192, 38, 15)

[node name="Marker2D" type="Marker2D" parent="."]

[node name="ShootingPoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-13, 6.99999)
